# ankicraft

./: .env.example  .gitignore  Dockerfile  QWEN.md  README.md  docker-compose.yml  pyproject.toml  start_server.sh
ankicraft/: __main__.py  api.py  settings.py  web.py
ankicraft/flashcard_generator/: ai_processor.py  anki_exporter.py  card_quality.py  cli.py  flashcard_generator.py  language_detector.py  pdf_extractor.py  processor.py  summarizer.py  web_extractor.py
uv_app/: settings.py
uv_app/flashcard_generator/: __init__.py  __main__.py  ai_processor.py  anki_exporter.py  cli.py  processor.py
